Nav collapse background fix

--- a/css/site.css
+++ b/css/site.css
@@ -121,6 +121,9 @@ h1, h2, h3, h4, h5, h6 {
 .color-white{
   color: white !important;
 }
+.back-color-nav{
+  background: var(--navColor) !important;
+}
 
 /* Introduction index.html */ 
 .introduction{
